# Kobo-Libra-Colour-LIBRE

./: .gitignore  LICENSE  README.md  kobo-libra-colour-analyse.md
docs/: extract-firmware.md
re/: 01_symbols.py  02_rtti.py  03_headers.py  04_disasm.py  05_funcinfo.py  06_ancestry.py  07_endpoints.py  ARCHITECTURE.md  RECONSTRUCTION.md  build_bundle.sh  deploy.sh  disasm.py  run_ghidra.sh
re/ghidra_scripts/: DecompileTargets.java  DecompileTargets.py
re/kobo-companion/: Cargo.toml  INSTALL.md  test_db.py  test_syncd.py
re/kobo-companion/config/: fbhook.conf  features.conf  kobo-companion.conf  netcut.conf
re/kobo-companion/crates/comic/: Cargo.toml
re/kobo-companion/crates/comic/src/: cbz.rs  detect.rs  lib.rs  order.rs  pipeline.rs  render.rs  sidecar.rs
re/kobo-companion/crates/comic/tests/: e2e.rs
re/kobo-companion/crates/convert/: Cargo.toml
re/kobo-companion/crates/convert/src/: lib.rs
re/kobo-companion/crates/fbhook/: Cargo.toml
re/kobo-companion/crates/fbhook/src/: lib.rs  transform.rs
re/kobo-companion/crates/kclient/: Cargo.toml
re/kobo-companion/crates/kclient/src/: lib.rs
re/netcut/: hosts  hosts_blocklist.txt  memorylogger  opds-netcut
re/opds-sync/: netcut.conf  opds-sync.conf  opds-sync.py  test_local.py
re/opds-sync-rs/: Cargo.toml  test_rust.py
re/opds-sync-rs/src/: main.rs
