[workspace]
resolver = "2"
members = [
    "crates/kclient",
    "crates/convert",
    "crates/fbhook",
    "crates/comic",
    "bin/kobo-syncd",
    "bin/kobo-dbtool",
    "bin/comic-panelize",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

# Binaire le plus petit possible (pas de panic=abort : tokio/reqwest préfèrent l'unwind)
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
